--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "author": "GateGroup",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
