--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
